# RunDesk

./: .gitignore  LICENSE.txt  README.md  build.bat  installer.iss  pyproject.toml  rundesk.spec
app/: __main__.py  bootstrap.py  main.py
app/core/: app_state.py  log_capture.py  startup_manager.py
app/core/actions/: action_executor.py  command_router.py  window_manager.py
app/core/commands/: command_store.py
app/core/config/: config_store.py  migrations.py  schemas.py
app/core/hotkey/: hotkey_manager.py
app/core/input/: alias_resolver.py  command_parser.py  fuzzy_matcher.py
app/core/scenes/: scene_store.py
app/core/sounds/: sound_player.py
app/i18n/: __init__.py  catalog_en.py  catalog_es.py  translator.py
app/ui/: shell.py  styles.py
app/ui/components/: command_dialog.py  scene_dialog.py  sidebar.py
app/ui/overlay/: input_overlay.py
app/ui/pages/: about_page.py  appearance_page.py  commands_page.py  dashboard_page.py  diagnostics_page.py  languages_page.py  launcher_settings_page.py  scenes_page.py  tutorials_page.py
scripts/: generate_icon.py
tests/: test_action_executor.py  test_app_state.py  test_command_parser.py  test_command_store.py  test_config_store.py  test_export_import.py  test_i18n.py  test_scene_store.py  test_sound_player.py  test_window_manager.py
